search and loading

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
         <br>
         <h1>MY WEBSITE!!!</h1>
 
-        
+        <a href = "search.html"></a>
+        <a href = "loading.html"></a>
+
     </body>
 
 </html>
