--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <br>
         <h1>MY WEBSITE!!!</h1>
 
-        <a href = "search.html"></a>
-        <a href = "loading.html"></a>
+        <a href = "search.html">1. search.html</a>
+        <a href = "loading.html">2. loading.html</a>
 
     </body>
 
