--- a/index.html
+++ b/index.html
@@ -3,16 +3,25 @@
 
     <head>
         <title>My First Website 🤩🤩</title>
+        <link rel = "stylesheet" href = "css-and-js/index.css">
     </head>
 
+    <div class = "background"><img src = css-and-js/images/cat.jfif></div>
     <body>
-        <br>
-        <h3>Welcome to</h3>
-        <br>
-        <h1>MY WEBSITE!!!</h1>
+        <header class = header>
+            <br>
+            <h3>Welcome to</h3>
+            <br>
+            <h1>MY WEBSITE!!!</h1>
+        </header>
 
-        <a href = "search.html">1. search.html</a>
-        <a href = "loading.html">2. loading.html</a>
+        <ol class = assignments>
+        <li><a href = "search.html">Search</a></li>
+            <br>
+        <li><a href = "loading.html">Loading</a></li>
+            <br>
+        <li><a href = "expanding.html">Expanding</a></li>
+        </ol>
 
     </body>
 
