--- a/search.html
+++ b/search.html
@@ -18,5 +18,5 @@
     </body>
 
     <script src="https://kit.fontawesome.com/f5a462685f.js" crossorigin="anonymous"></script>
-
+    <script src = "css-and-js/search.js"></script>
 </html>
