--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
         <li><a href = "loading.html">Loading</a></li>
             <br>
         <li><a href = "expanding.html">Expanding</a></li>
+            <br>
+        <li><a href = "sound.html">Sound</a></li>
         </ol>
 
     </body>
