Tue, Mar 5, 2024, 2:30 PM -08:00

--- a/index.html
+++ b/index.html
@@ -6,25 +6,32 @@
         <link rel = "stylesheet" href = "css-and-js/index.css">
     </head>
 
-    <div class = "background"><img src = css-and-js/images/cat.jfif></div>
-    <body>
-        <header class = header>
+<body>
+
+    <header class = header>
             <br>
             <h3>Welcome to</h3>
             <br>
             <h1>MY WEBSITE!!!</h1>
-        </header>
+    </header>
 
-        <ol class = assignments>
-        <li><a href = "search.html">Search</a></li>
-            <br>
-        <li><a href = "loading.html">Loading</a></li>
-            <br>
-        <li><a href = "expanding.html">Expanding</a></li>
-            <br>
-        <li><a href = "sound.html">Sound</a></li>
-        </ol>
+        <div class = "dropdown">
+            <button onclick = "dropFunction()" class = "dropButton">Assignments</button>
+            <div class = "dropContent" id = "dropdown">
+                <ol class = assignments>
+                <li><a href = "search.html">Search</a></li>
+                    <br>
+                <li><a href = "loading.html">Loading</a></li>
+                    <br>
+                <li><a href = "expanding.html">Expanding</a></li>
+                    <br>
+                <li><a href = "sound.html">Sound</a></li>
+                </ol>
+            </div>
+        </div>
 
-    </body>
+</body>
+
+    <script src = "css-and-js/index.js"></script>
 
 </html>
