--- a/navigation.html
+++ b/navigation.html
@@ -9,7 +9,7 @@
 
 <body>
 
-    <!-- <nav class="nav">
+    <nav class="nav">
         <div class="container">
             <h1 class="logo">
                 <a href="navigation.html">My Website</a>
@@ -21,7 +21,7 @@
                 <li><a href="#">Contact</a></li>
             </ul>
         </div>
-    </nav> -->
+    </nav>
 
     <div class="hero">
         <div class="container">
