--- a/navigation.html
+++ b/navigation.html
@@ -9,7 +9,7 @@
 
 <body>
 
-    <nav class="nav">
+    <nav class="nav active">
         <div class="container">
             <h1 class="logo">
                 <a href="navigation.html">My Website</a>
