Fri, Mar 8, 2024, 2:52 PM -08:00

--- a/index.html
+++ b/index.html
@@ -1,37 +1,39 @@
 <!DOCTYPE html>
-<html lang = "en">
+<html lang="en">
 
     <head>
         <title>My First Website 🤩🤩</title>
-        <link rel = "stylesheet" href = "css-and-js/index.css">
+        <link rel="stylesheet" href="css-and-js/index.css">
     </head>
 
-<body>
+    <body>
 
-    <header class = header>
+        <header class=header>
             <br>
             <h3>Welcome to</h3>
             <br>
             <h1>MY WEBSITE!!!</h1>
-    </header>
+        </header>
 
-        <div class = "dropdown">
-            <button onclick = "dropFunction()" class = "dropButton">Assignments</button>
-            <div class = "dropContent" id = "dropdown">
-                <ol class = assignments>
-                <li><a href = "search.html">Search</a></li>
+        <div class="dropdown">
+            <button onclick="dropFunction()" class="dropButton">Assignments</button>
+            <div class="dropContent" id="dropdown">
+                <ol class=assignments>
+                    <li><a href="search.html">Search</a></li>
                     <br>
-                <li><a href = "loading.html">Loading</a></li>
+                    <li><a href="loading.html">Loading</a></li>
                     <br>
-                <li><a href = "expanding.html">Expanding</a></li>
+                    <li><a href="expanding.html">Expanding</a></li>
                     <br>
-                <li><a href = "sound.html">Sound</a></li>
+                    <li><a href="sound.html">Sound</a></li>
+                    <br>
+                    <li><a href="navigation.html">Navigation</a></li>
                 </ol>
             </div>
         </div>
 
-</body>
+    </body>
 
-    <script src = "css-and-js/index.js"></script>
+    <script src="css-and-js/index.js"></script>
 
 </html>
