--- a/navigation.html
+++ b/navigation.html
@@ -12,7 +12,7 @@
     <nav class="nav">
         <div class="container">
             <h1 class="logo">
-                <a href="navigation.html">My Website</a>
+                <a href="index.html">My Website</a>
             </h1>
             <ul>
                 <li><a href="#" class = "current">Home</a></li>
