--- a/landing.html
+++ b/landing.html
@@ -12,7 +12,19 @@
         <div class="logo">
             <img src="css-and-js/images/logo.jfif" alt="user">
         </div>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Portfolio</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Contact Me</a></li>
+        </ul>
     </nav>
+
+    <header>
+        <button id="toggle" class = "toggle">
+            <i class="fa fa-bars fa-2x"></i>
+        </button>
+    </header>
 
 </body>
 <script src = "css-and-js/landing.js"></script>
