Fri, Mar 8, 2024, 3:12 PM -08:00

--- a/landing.html
+++ b/landing.html
@@ -24,7 +24,27 @@
         <button id="toggle" class = "toggle">
             <i class="fa fa-bars fa-2x"></i>
         </button>
+
+        <h1>Landing</h1>
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, maiores?</p>
+
+        <button class="cta-btn" id="open">Sign Up</button>
     </header>
+
+    <div class="container">
+        <h2>What is this landing page about?</h2>
+
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius corporis facere eum maiores sed consequatur rerum cumque reprehenderit nemo temporibus voluptas, delectus veritatis veniam modi natus? Beatae vero nihil dicta.</p>
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quo distinctio rem nesciunt voluptate provident aperiam vero sunt sapiente. Cumque.</p>
+
+        <h2>Tell Me More</h2>
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam est excepturi praesentium architecto sint sapiente officia quis ea necessitatibus impedit reiciendis enim non veniam cumque odio, vel distinctio quod unde nobis repellat fugit! Quo laudantium laboriosam reprehenderit odio dicta obcaecati.</p>
+
+        <h2>Benefits</h2>
+    </div>
 
 </body>
 <script src = "css-and-js/landing.js"></script>
