Fri, Mar 15, 2024, 2:37 PM -07:00

--- a/landing.html
+++ b/landing.html
@@ -44,6 +44,48 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam est excepturi praesentium architecto sint sapiente officia quis ea necessitatibus impedit reiciendis enim non veniam cumque odio, vel distinctio quod unde nobis repellat fugit! Quo laudantium laboriosam reprehenderit odio dicta obcaecati.</p>
 
         <h2>Benefits</h2>
+
+        <ul>
+            <li>Lifetime Access</li>
+            <li>30 Day Money Back</li>
+            <li>Tailored Customer Support</li>
+        </ul>
+
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis consequuntur officia fuga repellendus? Expedita odio hic perferendis ullam earum! Optio ratione autem itaque perspiciatis libero sapiente et consequatur, labore enim delectus nisi, sit quaerat officia? Quibusdam voluptates laboriosam iste aperiam, maiores laborum perspiciatis doloribus magni, sed at error similique corrupti eveniet deserunt nihil quisquam possimus, eaque corporis alias! Nam eaque corporis facere soluta cupiditate culpa illo harum molestiae deserunt repellendus.</p>
+    </div>
+
+    <!-- modal -->
+    <div class="modal-container" id="modal">
+        <div class="modal">
+            <button class="close-btn" id="close">
+                <i class="fa fa-times"></i>
+            </button>
+            <div class="modal-header">
+                <h3>Sign Up</h3>
+            </div>
+            <div class="modal-content">
+                <p>Register with us to get offers, support and more</p>
+                <form class="modal-form">
+                    <div>
+                        <label for="name">Name</label>
+                        <input type="text" id = "name" placeholder = "Enter name" class = "form-input">
+                    </div>
+                    <div>
+                        <label for="email">Email</label>
+                        <input type="email" id = "email" placeholder = "Enter email" class = "form-input">
+                    </div>
+                    <div>
+                        <label for="password">Password</label>
+                        <input type="password" id = "password" placeholder = "Enter password" class = "form-input">
+                    </div>
+                    <div>
+                        <label for="password2">Confirm password</label>
+                        <input type="password" id = "password2" placeholder = "Confirm password" class = "form-input">
+                    </div>
+                    <input type="submit" value="Submit" class = "submit-btn">
+                </form>
+            </div>
+        </div>
     </div>
 
 </body>
