Fri, Mar 15, 2024, 6:18 PM -07:00

--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
                     <li><a href="sound.html">Sound</a></li>
                     <br>
                     <li><a href="navigation.html">Navigation</a></li>
+                    <br>
+                    <li><a href="landing.html">Landing</a></li>
                 </ol>
             </div>
         </div>
