--- a/landing.html
+++ b/landing.html
@@ -10,7 +10,7 @@
 <body>
     <nav id="navbar">
         <div class="logo">
-            <img src="css-and-js/images/logo.jfif" alt="user">
+                <a href = "index.html"><img src="css-and-js/images/logo.jfif" alt="user"></a>
         </div>
         <ul>
             <li><a href="#">Home</a></li>
