Fri, Mar 15, 2024, 6:19 PM -07:00

--- a/search.html
+++ b/search.html
@@ -8,6 +8,7 @@
 
     <body>
 
+        .homeLink  
         <div class = "search-box">
             <input class = "input" type = "text" placeholder = "Type here">
             <button class = "btn">
