Fri, Mar 15, 2024, 6:24 PM -07:00

--- a/search.html
+++ b/search.html
@@ -8,7 +8,7 @@
 
     <body>
 
-        .homeLink  
+        <div class = "homeLink"><a href = "index.html">Home</a></div>
         <div class = "search-box">
             <input class = "input" type = "text" placeholder = "Type here">
             <button class = "btn">
