--- a/loading.html
+++ b/loading.html
@@ -11,6 +11,7 @@
     <body>
         <div class = "background"></div>
         <div class = "loadingText">0%</div>
+        <button id = "homeButton" class = "homeButton"></button>
     </body>
 
     <script src = "css-and-js/loading.js"></script>
