Fri, Mar 15, 2024, 6:34 PM -07:00

--- a/loading.html
+++ b/loading.html
@@ -10,8 +10,9 @@
 
     <body>
         <div class = "background"></div>
+        <div></div><a class = "homeLink">Home</a>
         <div class = "loadingText">0%</div>
-        <button id = "homeButton" class = "homeButton"></button>
+        <!-- <button id = "homeButton" class = "homeButton"></button> -->
     </body>
 
     <script src = "css-and-js/loading.js"></script>
